--- a/src/app/components/directives/pricing/pricing.html
+++ b/src/app/components/directives/pricing/pricing.html
@@ -2,34 +2,155 @@
 <div class="light-primary-color">
     <div class="row default-primary-color pricing" style="margin-bottom:0px;">
         <div class="col s12  center-align">
-            <h3 class="title" translate="pricing.title"></h3>
+            <h3 class="title" translate="pricing.titleTarif" ng-if="public==='true'"></h3>
+            <h3 class="title" translate="pricing.titleInvite" ng-if="public==='false'"></h3>
             
         </div>
 
         <div class="col s12">&nbsp;</div>
         <div class="col s12 ">
             <div class="row">
-                <div class="col s12"><h5 class="title primary-text-color" translate="pricing.desc"></h5></div>
-             
                 <div class="col s12">
                     <div class="card-title dark-primary-color">
-                        <h5 translate="pricing.offers.standard.title"></h5>
+                        <img src="../../../assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}" width="25%" height="25%" class="hide-on-med-and-up"> &nbsp;
+                        <img src="../../../assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}" width="25%" height="25%" class="hide-on-med-and-up"> &nbsp;
+                        <img src="../../../assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}" width="25%" height="25%" class="hide-on-med-and-up">
+                        <img src="../../../assets/images/icons/home-camera-M.png" title="{{'landing.part-2.capture' | translate}}" class="hide-on-small-only"> &nbsp;
+                        <img src="../../../assets/images/icons/home-stats-M.png" title="{{'landing.part-2.analyze' | translate}}" class="hide-on-small-only"> &nbsp;
+                        <img src="../../../assets/images/icons/home-progress-M.png" title="{{'landing.part-2.progress' | translate}}" class="hide-on-small-only">
                     </div>
-                    <div class="card-content light-primary-color">
-                        <div class="row"> 
+
+                    <div class="card-content dark-text-color white" >
+                        <div class="row" ng-if="public==='true'"> 
                             <div class="price center-align col s12 accent-text-color">
                                 <h4>{{'pricing.offers.standard.price' | translate}} € {{'pricing.offers.standard.period' | translate}} </h4>
-                                <h5 class="center-align col s12 primary-text-color">{{'pricing.trial.title'  | translate}}</h5>
+                                <h4 class="center-align col s12 primary-text-color">{{'pricing.trial.title'  | translate}}</h4>
                             </div>
                             
                         </div>
+                        <div class="row" ng-if="public==='false'"> 
+                            <div class="price center-align col s12 accent-text-color" ng-if="public==='false'">
+                                <h3>{{'pricing.trial.title'  | translate}}</h3>
+                            </div>
+                        </div>
                         
                         <div class="row">
+                            <div class="col s12 l6">
+                                <div class="row"> 
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-http-M.png" width="90%" height="90%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-http-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align secondary-text-color">
+                                        <h5>{{'pricing.offers.standard.appWeb' | translate}}</h5>
+                                    </div>
+
+                                    <div class="col s4">&nbsp;</div>
+                                    <div class="col s8 secondary-text-color"><hr></div>
+                                </div>
+
+                                <div class="row">
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">
+                                        <h5>{{'pricing.offers.standard.teamWeb.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.teamWeb.detail' | translate}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">    
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">    
+                                        <h5>{{'pricing.offers.standard.agendaWeb.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.agendaWeb.detail' | translate}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">
+                                        <h5>{{'pricing.offers.standard.statsWeb.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.statsWeb.detail' | translate}}</span>
+                                    </div>
+                                </div>    
+                                <div class="row">
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-share-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-share-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">
+                                        <h5>{{'pricing.offers.standard.shareWeb.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.shareWeb.detail' | translate}}</span>
+                                    </div>
+                                </div>
+
+                                <div class="row"><div class="col s12">&nbsp;</div></div>
+                            </div>
+                            <div class="col s12 l6">
+                                <div class="row"> 
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-mobile-M.png" width="90%" height="90%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-mobile-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align secondary-text-color">
+                                        <h5>{{'pricing.offers.standard.appMob' | translate}}</h5>
+                                    </div>
+
+                                    <div class="col s4">&nbsp;</div>
+                                    <div class="col s8 secondary-text-color"><hr></div>
+                                </div>
+                                 <div class="row">
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-teams-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-teams-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">
+                                        <h5>{{'pricing.offers.standard.teamMob.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.teamMob.detail' | translate}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">    
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-agenda-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">    
+                                        <h5>{{'pricing.offers.standard.agendaMob.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.agendaMob.detail' | translate}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-stats-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-stats-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">
+                                        <h5>{{'pricing.offers.standard.statsMob.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.statsMob.detail' | translate}}</span>
+                                    </div>
+                                </div>
+                                <div class="row">    
+                                    <div class="col s4">
+                                        <img src="../../../assets/images/icons/pricing-camera-M.png" width="75%" height="75%" class="hide-on-med-and-up">
+                                        <img src="../../../assets/images/icons/pricing-camera-M.png" class="hide-on-small-only">
+                                    </div>
+                                    <div class="col s8 left-align">    
+                                        <h5>{{'pricing.offers.standard.collectMob.title' | translate}}</h5>
+                                        <span>{{'pricing.offers.standard.collectMob.detail' | translate}}</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                            
+                        <div class="row" ng-if="public==='false'">
                             <div class="center-align col s12"> 
-                                <img src="../../../assets/images/icons/pricing-teams-M.png" title="{{'pricing.offers.standard.detail.line1' | translate}}">
-                                <img src="../../../assets/images/icons/pricing-agenda-M.png" title="{{'pricing.offers.standard.detail.line2' | translate}}">
-                                <img src="../../../assets/images/icons/pricing-stats-M.png" title="{{'pricing.offers.standard.detail.line4' | translate}}">
-                                <img src="../../../assets/images/icons/pricing-share-M.png" title="{{'pricing.offers.standard.detail.line3' | translate}}">
+                                <h3 class="center-align col s12 secondary-text-color">{{'pricing.offers.standard.priceInvite' | translate}} € {{'pricing.offers.standard.period' | translate}} </h3>
                             </div>
                         </div>
                         <div class="row" ng-show="subscribeButton">
@@ -46,7 +167,7 @@
                                         class="btn waves-effect waves-white accent-color"
                                         ng-click="acceptInvitation()">
                                 </button>
-                                
+                                &nbsp;
                                 <button type="submit" translate="commons.buttons.refuse"
                                         class="btn waves-effect waves-white light-primary-color"
                                         ng-click="refuseInvitation()">
@@ -55,8 +176,9 @@
                         </div>
                         <div class="row">&nbsp;</div>
                     </div>
+                    
                 </div>
-                <div class="col s12">
+                <div class="col s12" ng-if="public==='true'">
                     <p class="center-align white-text" translate="pricing.team-subscribe"></p>
                 </div>
             </div>
