--- a/src/app/index.css
+++ b/src/app/index.css
@@ -112,13 +112,13 @@
 }
 
 .landing {
-    max-height: 100vh;
+    max-height: 100%;
+    height: 100%;
     width: 100%;
-    height: 100vh;
     padding: 5vh 10vw 10vh 10vw;
     text-align: center;
     position: relative;
-    background: url("../assets/images/handball/Pricing.jpg") fixed center 60%;
+    background: url("../assets/images/handball/Pricing.jpg") fixed center 40%;
     background-size: cover;
 }
 
@@ -154,7 +154,7 @@
 }
 
 .landing div {
-    margin-bottom: 10vh;
+    margin-bottom: 1vh;
 }
 
 .landing-part-two div {
