--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -62,16 +62,16 @@
                                 </div>
                                 <div class="col m2 hide-on-med-and-down">&nbsp;</div>
                             </div>
-
                             <div class="row">
                                 <div class="col m2 hide-on-med-and-down">&nbsp;</div>
                                 <div class="input-field col m8 s12">
                                     <div ng-repeat="struct in listStructures track by $index">
                                         <input class="with-gap"
+                                               name="structureGrp"
                                                type="radio"
                                                id="structure.{{struct._id}}"
                                                value="{{struct._id}}"
-                                               ng-model="structure._id"
+                                               ng-model="vm.selectedStructure"
                                                ng-change="applyChangeStructure()"
                                                required/>
                                         <label for="structure.{{struct._id}}">
@@ -85,7 +85,7 @@
                             </div>
                         </div>
 
-                        <div ng-show="catAgeSelectOK">
+                        <div ng-show="structure._id">
                             <div class="row hide-on-large-only">
                                 <div class="col input-field s12">
                                     <label>{{'signupEndPage.tabFindClub.form.label.categoryAge' | translate}} <span
