fixes QHBAPA-11 and fixes QHBWEB-40

--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -95,7 +95,7 @@
 
                                 <div class="input-field col s12">
                                     <select name="categoryAgeSelect" ng-model="categoryAge" id="userCategoryAgeSelect"
-                                            material-select
+                                            material-select watch
                                             required
                                             ng-options="cat as cat.label for cat in valuesCategoryAge track by cat._id">
                                     </select>
