fixes QHBWEB-36 : [CON-002] Bouton actif à tort

--- a/src/app/modules/commons/users/password/pwdRenew.html
+++ b/src/app/modules/commons/users/password/pwdRenew.html
@@ -3,7 +3,7 @@
     <div class="row"></div>
 
     <!-- Entete -->
-    <title-page-bar icon="cached" title="renewPasswdPage.title"></title-page-bar>
+    <title-page-bar icon="cached" title="renewPasswdPage.title" display-back="false"></title-page-bar>
 
     <div class="row card bleu-grey-text text-darken-2">
         <form ng-submit="renewPasswd()" name="renewForm">
