--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -211,8 +211,8 @@
             </div>
             <div class="row hide-on-small-only">
                 <div>
-                    <a href="" class="light-text-color left" ng-click="openForgotPwd()">{{'modal.login.label.forgotpasswd' | translate }}</a>
-                    <a class="secondary-text-color right" ng-click="openSignup()" translate="navbar.signup"></a>
+                    <a href="" class="light-text-color left" ng-click="openForgotPwd()" translate="modal.login.label.forgotpasswd"></a>
+                    <a href="" class="secondary-text-color right" ng-click="openSignup()" translate="navbar.signup"></a>
                 </div>
                 
             </div>
