--- a/src/app/components/directives/commons/titlePageBar/titlePageBar.html
+++ b/src/app/components/directives/commons/titlePageBar/titlePageBar.html
@@ -1,13 +1,13 @@
 <!-- Entete -->
 <div class="row dark-primary-color center valign-wrapper hide-on-med-and-down">
-    <div class="col l1">
+    <div class="col l1 m2">
         <i class="material-icons md-48 light-text-color ">{{icon}}</i>
     </div>
-    <div class="col l9 left-align">
+    <div class="col l9 m6 left-align">
         <h5 translate="{{title}}"></h5>
     </div>
 
-    <div class="col l2">
+    <div class="col l2 m4">
         <button class="btn accent-color right" ng-click="doTheBack()" ng-if="displayBack === true"
                 translate="commons.buttons.back"></button>
     </div>
