--- a/src/app/index.css
+++ b/src/app/index.css
@@ -193,7 +193,7 @@
 }
 
 .btn, .btn-large, .btn-flat {
-    width: 45%;
+    min-width: 45%;
     height: 40px;
     padding: 2px;
     max-width: 200px;
@@ -440,6 +440,16 @@ table.super-fancy tr.foobar {
 @media only screen and (max-width: 600px) {
     .container {
         width: 90%;
+    }
+}
+@media only screen and (max-width: 1025px) {
+    .brand-logo {
+        max-width: 30%;
+    }
+}
+@media only screen and (max-width: 769px) {
+    .brand-logo {
+        max-width: 70%;
     }
 }
 
@@ -1120,4 +1130,8 @@ table.super-fancy tr.foobar {
     -o-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
     box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.12);
     filter:progid:DXImageTransform.Microsoft.Shadow(color=rgba(0, 0, 0, 0.12), Direction=180, Strength=10);
+}
+
+.container-header {
+
 }
