fixes QHBWEB-34 : [EFF-001] Détail radar

--- a/src/app/components/directives/stats/hand/detailModal.html
+++ b/src/app/components/directives/stats/hand/detailModal.html
@@ -4,6 +4,9 @@
 </button>
 
 <div id="modal-{{uid}}" class="modal graph-modal">
+    <div class="modal-header right">
+            <button class="waves-effect waves-teal btn-flat fa fa-fw fa-close" ng-click="close(uid)"></button>
+    </div>
     <div class="modal-content compare-modale">
         <form name="myForm">
             <div class="row dark-primary-color valign-wrapper">
