--- a/src/app/modules/sandbox/effective/players/compare.html
+++ b/src/app/modules/sandbox/effective/players/compare.html
@@ -40,7 +40,7 @@
                     </tr>
                     </tbody>
                 </table>
-                <div class="row">
+                <div class="row" ng-if="periodicityActive">
                     <div class="col s12 m6">
                         <qaobee-radar-chart
                                 title="{{'stats.actionTab.attack' | translate}} {{'stats.actionTab.positive' | translate}}"
